Fix styling on mobile of search input

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -191,6 +191,10 @@ a:hover {
     width: 0;
     overflow: hidden;
   }
+
+  .aa-Input {
+    --height: 30px;
+  }
 }
 
 :root {
